# account_ar

./: .gitignore  CHANGELOG  COPYRIGHT  INSTALL  MANIFEST.in  README  __init__.py  __tryton__.py  account.py  account.xml  account_ar.py  account_ar.xml  chart_account.fodt  chart_account.odt  fiscalyear.py  fiscalyear.xml  message.xml  move.py  pyproject.toml  setup.py  statement.py  statement.xml  tax_ar.xml  tox.ini  tryton.cfg
doc/: index.rst
locale/: es.po  es_AR.po
tests/: __init__.py  test_account_ar.py  test_module.py  tools.py
view/: fiscalyear_balance_deferral_start_form.xml  fiscalyear_restart_deferral_start_form.xml  print_chart_account_start_form.xml  statement_line_form.xml  tax_form.xml  tax_group_form.xml  tax_group_tree.xml
